--- a/APUNTES-LMI-EDD/mkdocs.yml
+++ b/APUNTES-LMI-EDD/mkdocs.yml
@@ -1,4 +1,6 @@
 site_name: 'Documentació de les tasques'
+docs_dir: 'docs_md'
+site_dir: 'docs'
 theme:
   name: 'material'
   custom_dir: 'overrides'
